# vibeTerm

./: .gitignore  README.md  index.html  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.json  vite.config.ts
.github/workflows/: pages.yml  release.yml
docs/: index.html
patches/tao/: Cargo.toml
scripts/: gen-icon.cjs  release.sh
server/: package-lock.json  package.json  pnpm-lock.yaml
server/src/: git-handler.ts  index.ts  pty-manager.ts
src/: App.tsx  notifications.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: git.rs  git_watcher.rs  lib.rs  main.rs  pty.rs  remote_server.rs
src/components/: BranchPicker.tsx  ChangesPanel.tsx  ConnectionBadge.tsx  ErrorBanner.tsx  GitDiffPanel.tsx  GitHistoryPanel.tsx  MainPanel.tsx  PermissionModal.tsx  RemoteAccessPanel.tsx  SettingsModal.tsx  Sidebar.tsx  StatusBar.tsx  TerminalView.tsx  ToastContainer.tsx  tabTheme.ts
src/hooks/: useErrorHandler.ts  useGitWatch.ts  useVisualViewport.ts
src/prompt-detection/: detectors.ts  scan.ts  types.ts
src/store/: connectionStore.ts  promptStore.ts  settingsStore.ts  tabStore.ts  toastStore.ts  uiStore.ts
src/test/: classifyFailure.test.ts  diff.test.ts  notifications.test.ts  parsePtyOutput.test.ts  promptDetectors.test.ts  promptScan.test.ts  promptStore.test.ts  settingsStore.test.ts  setup.ts  tabStore.test.ts  toastStore.test.ts  uiControls.test.tsx
src/transport/: classifyFailure.ts  factory.ts  parsePtyOutput.ts  tauri.ts  token.ts  types.ts  websocket.ts
(+25 files in other folders)
