[package]
name = "vibeterm"
version = "1.0.0"
description = "vibeTerm — Contextual Terminal Workspace"
authors = []
edition = "2021"

[lib]
name = "vibeterm_lib"
crate-type = ["cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["image-png"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
hex = "0.4"
rand = "0.8"
portable-pty = "0.8"
once_cell = "1"

# Patch tao to fix macOS 15 (Sequoia) panic in is_main_thread()
# +[NSThread isMainThread] returns false inside applicationDidFinishLaunching on Sequoia;
# the patched version uses pthread_main_np() which is always correct.
[patch.crates-io]
tao = { path = "../patches/tao" }

[profile.dev]
panic = "unwind"

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"
strip = true
